after second lecture

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <h1>Do You Have This?</h1>
     </header>
     <main>
-        <section>
+        <section id='addItemSection'>
             <h2>Add New Item:</h2>
-            <input type='text' placeholder='Item Name' />
-            <select>
+            <input type='text' placeholder='Item Name' id='nameIn'/>
+            <select id='sizeIn'>
                 <option>Tiny</option>
                 <option>Small</option>
                 <option>Med</option>
                 <option>Large</option>
                 <option>Huge</option>
             </select>
-            <select>
+            <select id='colorIn'>
                 <option>Red</option>
                 <option>Orange</option>
                 <option>Yellow</option>
@@ -32,9 +32,9 @@
                 <option>Blue</option>
                 <option>Violet</option>
             </select>
-            <button>Add Item</button>
+            <button id='addItemButton'>Add Item</button>
         </section>
-        <section>
+        <section id='searchSection'>
             <h2>Search:</h2>
         </section>
     </main>
