--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
         </section>
         <section id='searchSection'>
             <h2>Search:</h2>
+            <select id='sizeSearchIn'>
+                <option>Tiny</option>
+                <option>Small</option>
+                <option>Med</option>
+                <option>Large</option>
+                <option>Huge</option>
+            </select>
+            <select id='colorSearchIn'>
+                <option>Red</option>
+                <option>Orange</option>
+                <option>Yellow</option>
+                <option>Green</option>
+                <option>Blue</option>
+                <option>Violet</option>
+            </select>
+            <button id='searchButton'>Search</button>
         </section>
     </main>
     <footer>
