--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
             </select>
             <button id='searchButton'>Search</button>
         </section>
+        <h2 id='searchParameters'></h2>
+        <section id='outputList'>
+            <ul id='itemsList'>
+            </ul>
+        </section>
     </main>
     <footer>
-        <p>copyright 2017 Canopus</p>
+        <p>copyright 2017 People and Stuff</p>
     </footer>
 </body>
 </html>
